refactor: optimize findPendingKyc query, inject PasswordEncoder, and extract isNotAdmin